--- a/index.html
+++ b/index.html
@@ -294,8 +294,11 @@
         <div class="section-divider"></div>
         <div class="benefit">
             <div class="benefit-text-content">
-                <h2>The UnHealth Dashboard</h2>
-                <p>An interactive county-focused public health dashboard integrating CDC PLACES data, and BEA and BLS economic data. The dashboard presents the UnHealth Score, a summary statistic that aggregates data from multiple health indicators, including chronic disease prevalence, lifestyle choices, and disability rates, facilitating direct comparisons between counties.</p>
+                <h2>The UnHealth Dashboard with A.I. Patient Analysis</h2>
+                <p>An interactive county-focused public health dashboard integrating CDC PLACES data, BEA and BLS economic data and synthetic patient data. 
+                    The dashboard presents the UnHealth Score, a summary statistic that aggregates data from multiple health indicators, facilitating direct comparisons between counties.
+                    <br>The A.I. Patient Analysis explores simulated individual patient data using an AI-generated patient summary, along with charts of vital signs, lab results, and quality of life metrics.
+                </p>
                 <ul>
                     <li><a href="https://unhealth-dashboard-6d75504325c4.herokuapp.com" target="_blank">Live App deployed on Heroku</a></li>
                     <li><a href="https://github.com/SloughJE/UnHealth_Dashboard" target="_blank">GitHub Repository</a></li>
