--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
               <p>Clients can engage my services through several flexible models tailored to meet different needs and project scopes:</p>
               <ul>
                 <li><strong>Hourly Consulting:</strong> Best for advice, guidance, or specific tasks without a long-term commitment.</li>
-                <li><strong>Retainer:</strong> Perfect for ongoing support, a retainer agreement ensures you have guaranteed access to my time for a set number of hours each week or month. Ideal for businesses that require continuous data science support without the overhead of a full-time hire.</li>
+                <li><strong>Retainer:</strong> Perfect for ongoing support, a retainer agreement ensures you have guaranteed access to my time for a set number of hours each week or month.</li>
+                <li><strong>Subscription:</strong> Similar to retainer, but focused on regular, predefined data science services, such as monthly analytics reports or ML model maintenance.</li>
                 <li><strong>Project-Based Pricing:</strong> Suitable for projects with specific deliverables and timelines. This fixed-price model is based on the project's scope and complexity.</li>
               </ul>
             </details>
