--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="benefit">
             <div class="benefit-text-content">
                 <h2>Aerial Straps Pose Classifier</h2>
-                <p>This project illustrates an ML project from conception to deployment. It uses computer vision and machine learning to classify aerial straps poses. Features OpenCV, MediaPipe, Optuna, MLflow, fastAPI, Docker, and GCR.</p>
+                <p>This project illustrates an ML project from conception to deployment: from data gathering and labeling to model versioning and deployment. It uses computer vision and machine learning to classify aerial straps poses. Features OpenCV, MediaPipe, Optuna, MLflow, fastAPI, Docker, and GCR.</p>
                 <br>
                 <ul>
                     <li><a href="https://aerial-straps-classifier-n3pdpbqp5a-ue.a.run.app/" target="_blank">Live App deployed on Google Cloud Run</a></li>
@@ -310,7 +310,7 @@
         <div class="benefit">
             <div class="benefit-text-content">
                 <h2>NASA ATD-2 Machine Learning for Predicting Aircraft Landing Times</h2>
-                <p>This project, in collaboration with researchers at NASA, involved developing machine learning models to improve the accuracy intra-flight aircraft landing time predictions, and integrating the model with real-time operational data for air traffic management.</p>
+                <p>This project, in collaboration with researchers at NASA, involved developing machine learning models to improve the accuracy of intra-flight aircraft landing time predictions. The model used features calculated in real-time from readily available data for airborne flights and led to significant improvents in prediction accuracy.</p>
                 <br>
                 <ul>
                     <li><a href="https://aviationsystems.arc.nasa.gov/publications/2021/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">Research Paper</a></li>
@@ -342,7 +342,7 @@
         <div class="benefit">
             <div class="benefit-text-content">
                 <h2>Podcast Episode Newsletter Creation Tool</h2>
-                <p>A tool that automates the creation of a newsletter for a podcast episode. It transcribes the episode using thes Whisper model, generates a summary and inspiring takeaway using the OpenAI GPT-3.5 Turbo API, and an image based on the podcast summary using the DALL-E API. A demo app is deployed on Streamlit.</p>
+                <p>A tool that automates the creation of a newsletter for a podcast episode. It transcribes the episode using the Whisper model, generates a summary and inspiring takeaway using the OpenAI GPT-3.5 Turbo API, and an image based on the podcast summary using the DALL-E API. A demo app is deployed on Streamlit.</p>
                 <br>
                 <ul>
                     <li><a href="https://podcastsummary-jslough.streamlit.app/" target="_blank">Demo App deployed on Streamlit</a></li>
