--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 
                     <p>If your business is looking to harness the power of data science without getting lost in technicalities, I am here to guide you through the journey. Let's unveil the stories hidden within your data together.</p>
                     -->
-                    <p>My journey into data science began while pursuing an dual MBA and MSc in Information and Communications Technology Business Management from Virginia Tech and Telecom Business School in Évry, France. It was during these programs, particularly through my MBA, that I discovered a fascination for statistics its application to real-world problems. Eventually, I convinced myself to pursue a Master's in Statistics from University College Dublin</p>
+                    <p>My journey into data science began while pursuing an dual MBA and MSc in Information and Communications Technology Business Management from Virginia Tech and Telecom Business School in Évry, France. It was during these programs, particularly through my MBA, that I discovered a fascination for statistics its application to real-world problems. Eventually, I convinced myself to pursue a Master's in Statistics from University College Dublin.</p>
                     <p>After obtaining the Master's in Statistics, I began working in data science consulting in Virginia. 
                         My six-plus years of consulting introduced me to working on a large variety of projects, in many different industries. </p> 
                     <p>My work ranged from constructing energy dashboards for a utility company to optimizing machine learning models to predict intra-flight aircraft landing times for NASA. 
@@ -292,7 +292,7 @@
                 <h2>The UnHealth Dashboard with A.I. Patient Analysis</h2>
                 <p>An interactive county-focused public health dashboard integrating CDC PLACES data, BEA and BLS economic data and synthetic patient data. 
                     The dashboard presents the UnHealth Score, a summary statistic that aggregates data from multiple health indicators, facilitating direct comparisons between counties.
-                    <br>The A.I. Patient Analysis explores simulated individual patient data using an AI-generated patient summary, along with charts of vital signs, lab results, and quality of life.
+                    <br>The A.I. Patient Analysis explores simulated individual patient data using an AI-generated patient summary which integrates patient history, current health status, local health metrics and the UnHealth Score.
                 </p>
                 <br>
                 <ul>
