--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
                   <li><strong>Data Wrangling and Processing for Analysis:</strong> Transforming raw data into clean, usable datasets. Automated data pipelines that process data for machine learning or visualizations ensuring your data is analysis-ready.</li>
                   <li><strong>Advanced Data Science Training:</strong> Training for non or semi-technical professionals to deepen their understanding of ML and statistics, enabling them to question, collaborate, and validate ML and statistical solutions effectively.</li>
                   <li><strong>Operationalization and Deployment:</strong> Implementing solutions in scalable environments using tools like AWS Sagemaker, GCR, and Docker, with tracking via MLflow for operational excellence.</li>
-                  <li><strong>API and Automation Services:</strong> Developing APIs for seamless model integration and automating data workflows to enhance efficiency and consistency.</li>
+                  <!-- <li><strong>API and Automation Services:</strong> Developing APIs for seamless model integration and automating data workflows to enhance efficiency and consistency.</li>
+                  -->  
               </ul>
           </div>
           <h2>AI, Data Science, and Education</h2>
