--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
 
           <ul>
             <li>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively.<br> 
-              I prioritize simplicity, clarity, and meaningful results for your business.</li>
+              My goal is to offer the expertise of a full-time data scientist, with the flexibility and efficiency of a consultant, delivering straightforward machine learning and data science solutions.
+              </li>
           </ul>
           </div>
           <div class="offerings">
