--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="offerings">
 
           <ul>
-            <li>With over 8 years of data science experience, I offer services aimed at transforming complex data into actionable insights and practical tools, and communicating results effectively.<br> 
+            <li>With over 8 years of data science experience, I offer services aimed at transforming complex data into useful results and practical tools, and communicating results effectively.<br> 
               My goal is to offer the expertise of a full-time data scientist, with the flexibility and efficiency of a consultant, delivering straightforward machine learning and data science solutions.
               </li>
           </ul>
