adding outbreak to portfolio

--- a/index.html
+++ b/index.html
@@ -272,7 +272,27 @@
         </div>
 
         <div class="section-divider"></div>
+        <div class="benefit">
+            <div class="benefit-text-content">
+                <h2>Outbreak!</h2>
+                <p>The purpose of Outbreak! is to automatically identify weekly "Potential Outbreaks" and "Ongoing Potential Outbreaks" of Nationally Notifiable Diseases in the US and to showcase a cloud-based AWS project.
+                    <br>The Potential Outbreak detection model is SageMaker's DeepAR time series model which predicts normal disease occurrence distributions. 
+                    <br>Each week, data is retrieved from the CDC's NNDSS API. 
+                    If the actual reported cases exceed the chosen threshold of the model's predicted distribution, the system flags this as a potential outbreak. 
+                    <br>The application leverages AWS services including Lambda for processing updates and triggering the weekly Sagemaker retraining job, S3 for data storage, Athena for data querying, and CloudWatch for monitoring system operations. Results are displayed through a Plotly Dash interface hosted on an EC2 server.
+                    This project features full automation, managing everything from data retrieval and model retraining to the presentation of results.
+                </p>
+                <br>
+                <ul>
+                    <li><a href="https://outbreak-tracker.com/" target="_blank">Outbreak Website</a></li>
+                </ul>
+            </div>
+            <div class="image-container">
+                <img src="assets/outbreak-screengrab.gif" alt="Outbreak Thumbnail" class="project-outbreak">
+            </div>
+        </div>
 
+        <div class="section-divider"></div>
         <div class="benefit">
             <div class="benefit-text-content">
                 <h2>Aerial Straps Pose Classifier</h2>
@@ -308,7 +328,6 @@
         </div>
 
         <div class="section-divider"></div>
-
         <div class="benefit">
             <div class="benefit-text-content">
                 <h2>NASA ATD-2 Machine Learning for Predicting Aircraft Landing Times</h2>
