--- a/index.html
+++ b/index.html
@@ -275,11 +275,9 @@
         <div class="benefit">
             <div class="benefit-text-content">
                 <h2>Outbreak!</h2>
-                <p>The purpose of Outbreak! is to automatically identify weekly "Potential Outbreaks" and "Ongoing Potential Outbreaks" of Nationally Notifiable Diseases in the US utilizing AWS cloud services.
-                    <br>SageMaker's DeepAR time series model, which predicts normal disease occurrence distributions, is used to detect potential outbreaks. 
-                    <br>Data is retrieved weekly from the CDC's NNDSS API, and if actual reported cases exceed the chosen threshold of the model's predicted distribution, it flags this as a potential outbreak. 
-                    <br>The application uses several AWS services including Lambda for processing updates and triggering the Sagemaker retraining job, S3 for data storage, Athena for data querying, and CloudWatch for monitoring. Results are displayed through a Plotly Dash interface hosted on an EC2 server.
-                    This project features full automation, managing everything from data retrieval and model retraining to the visualization of results.
+                <p>The purpose of Outbreak! is to automatically identify weekly "Potential Outbreaks" and "Ongoing Potential Outbreaks" of Nationally Notifiable Diseases in the US using AWS cloud services.
+                    <br>The application employs several AWS services: Lambda for pulling new data from the CDC NNDSS API and initiating model retraining, SageMaker for training, deploying, and making predictions with the DeepAR model, S3 for data storage, Athena for data querying, CloudWatch for monitoring, and IAM for managing secure access. Results are displayed through a Plotly Dash interface hosted on an EC2 server.
+                    <br>This project features full automation, managing everything from data retrieval and model retraining to the visualization of results.
                 </p>
                 <br>
                 <ul>
