--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <h2>Outbreak!</h2>
                 <p>The purpose of Outbreak! is to automatically identify weekly "Potential Outbreaks" and "Ongoing Potential Outbreaks" of Nationally Notifiable Diseases in the US using AWS cloud services.
                     <br>The application employs several AWS services: Lambda for pulling new data from the CDC NNDSS API and initiating model retraining, SageMaker for training, deploying, and making predictions with the DeepAR model, S3 for data storage, Athena for data querying, CloudWatch for monitoring, and IAM for managing secure access. Results are displayed through a Plotly Dash interface hosted on an EC2 server.
-                    <br>This project features full automation, managing everything from data retrieval and model retraining to the visualization of results.
+                    <br>All steps in this project are fully automated, covering everything from data retrieval and model retraining to the visualization of results.
                 </p>
                 <br>
                 <ul>
