--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Data Science Services</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Other head elements -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YY3VJ9Q7H9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YY3VJ9Q7H9');
+  </script>
+  
 </head>
 
 <body>
