--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>JS Data Science Services</title>
   <link rel="stylesheet" href="style.css">
   <!-- Other head elements -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YY3VJ9Q7H9"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE9LKYQRHE"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-YY3VJ9Q7H9');
+    gtag('config', 'G-LE9LKYQRHE');
   </script>
   
 </head>
