--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="offerings">
 
           <ul>
-            <li>With over 8 years of data science experience, I offer services aimed at transforming complex data into useful solutions and practical tools, and communicating results effectively.<br> 
+            <li>With over 9 years of data science experience, I offer services aimed at transforming complex data into useful solutions and practical tools, and communicating results effectively.<br> 
               My goal is to offer the expertise of a full-time data scientist, with the flexibility and efficiency of a consultant, delivering straightforward machine learning and data science solutions.
               </li>
           </ul>
@@ -250,7 +250,7 @@
                   <li><strong>Statistical Analysis and Modeling:</strong> Providing expert statistical analysis. Hypothesis testing, A/B testing, and complex modeling, supporting research and business insights.</li>
                   <li><strong>Data Wrangling and Processing for Analysis:</strong> Transforming raw data into clean, usable datasets. Automated data pipelines that process data for machine learning or visualizations ensuring your data is analysis-ready.</li>
                   <li><strong>Advanced Data Science Training:</strong> Training for non or semi-technical professionals to deepen their understanding of ML and statistics, enabling them to question, collaborate, and validate ML and statistical solutions effectively.</li>
-                  <li><strong>Operationalization and Deployment:</strong> Implementing solutions in scalable environments using tools like AWS Sagemaker, GCR, and Docker, with tracking via MLflow for operational excellence.</li>
+                  <li><strong>Solution Deployment:</strong> Deploying solutions in scalable environments using tools like AWS Sagemaker, GCR, and Docker.</li>
                   <!-- <li><strong>API and Automation Services:</strong> Developing APIs for seamless model integration and automating data workflows to enhance efficiency and consistency.</li>
                   -->  
               </ul>
