--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
               <p>Absolutely. I design solutions with scalability in mind, ensuring they can evolve in line with your business growth and data complexity.</p>
             </details>
             
+            <details class="faq-item">
+            <summary>Can you leverage state-of-the-art, next-gen AI to develop groundbreaking, game-changing, transformative, disruptive, paradigm-shifting solutions like ultra-intelligent chatbots, autonomous systems, and deeep neural networks to drive unprecedented, exponential, market-leading growth and cutting-edge innovation in everyday life and incorporate it into our AI strategy?</summary>
+            <p>No.</p>
         </section>
     </section>
     
