--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
                 
                     <p>If your business is looking to harness the power of data science without getting lost in technicalities, I am here to guide you through the journey. Let's unveil the stories hidden within your data together.</p>
                     -->
-                    <p>My journey into data science began while pursuing an dual MBA and MSc in Information and Communications Technology Business Management from Virginia Tech and Telecom Business School in Évry, France. It was during these programs, particularly through my MBA, that I discovered a fascination for statistics its application to real-world problems. Eventually, I convinced myself to pursue a Master's in Statistics from University College Dublin.</p>
-                    <p>After obtaining the Master's in Statistics, I began working in data science consulting in Virginia. 
-                        My six-plus years of consulting introduced me to working on a large variety of projects, in many different industries. </p> 
+                    <p>My journey into data science first began when I became interested in nutrition and started reading scientific articles in journals on the subject. I wanted to understand the statistical analyses, how the experiments were set up, and how the conclusions were reached. Then, while pursuing an MBA from Virginia Tech I took a Statistics class. I considered trying to switch to a Master's in Statistics, but ended up finishing the MBA. Eventually, I convinced myself to pursue a Master's in Statistics from University College Dublin.</p>
+                    <p>After completing the Master's in Statistics, I began working in data science consulting in Virginia. 
+                        This introduced me to a large variety of data science projects, in many different industries.</p> 
                     <p>My work ranged from constructing energy dashboards for a utility company to optimizing machine learning models to predict intra-flight aircraft landing times for NASA. 
                         I developed models to predict hotel stays and arrivals for a hospitality company, and for a client consulting company I created an interactive dashboard that modeled their network traffic for online meetings.</p>
                     <p>In addition to consulting, I worked directly for a cybersecurity company, developing machine learning models to identify malware and anomalies in network traffic.</p> 
                     <p>Clear communication and straightforward solutions emerged as the most important aspects of my work, ensuring that everyone, especially those non-technical, could understand the impact of the data science solutions on their business.</p>
 
-                    <p>With this background in agile, project-based approaches, I set up my own data science business to provide focused and efficient data science services. I cater to those in need of a skilled data scientist who adapts quickly, communicates effectively, and values simplicity over complexity in solution design.</p>
+                    <p>With this background, I started my own data science business to provide focused and efficient data science services. I cater to those in need of a skilled data scientist who adapts quickly, communicates effectively, and values simplicity over complexity in solution design.</p>
                                                 
                     <!--
                     <div class="testimonial">
