--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         </blockquote>
                     </div>
                     -->
-                    <p>Located in Richmond, VA, I'm <a href="javascript:void(0);" onclick="openTab('contact_page', this);" class="contact-link"><strong>available</strong></a> to work with partners from around the world.</p>
+                    <p>Located in Richmond, VA, I'm <a href="javascript:void(0);" onclick="openTab('contact_page', this);" class="contact-link"><strong>available</strong></a> to work with clients from around the world.</p>
                     <a href="https://www.linkedin.com/in/johneslough/" target="_blank">LinkedIn Profile</a>
 
                 </div>
