--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <div class="offerings">
 
           <ul>
-            <li>With over 9 years of data science experience, I offer services aimed at transforming complex data into useful solutions and practical tools, and communicating results effectively.<br> 
+            <li>With 10 years of data science experience, I offer services aimed at transforming complex data into useful solutions and practical tools, and communicating results effectively.<br> 
               My goal is to offer the expertise of a full-time data scientist, with the flexibility and efficiency of a consultant, delivering straightforward machine learning and data science solutions.
               </li>
           </ul>
