--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
                 <p>This project, in collaboration with researchers at NASA, involved developing machine learning models to improve the accuracy of intra-flight aircraft landing time predictions. The model used features calculated in real-time from readily available data for airborne flights and led to significant improvents in prediction accuracy.</p>
                 <br>
                 <ul>
-                    <li><a href="https://aviationsystems.arc.nasa.gov/publications/2021/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">Research Paper</a></li>
+                    <li><a href="https://ntrs.nasa.gov/api/citations/20210017594/downloads/20210017594_Wesely_Aviation2021_paper.pdf" target="_blank">Research Paper</a></li>
+                    <li><a href="https://ntrs.nasa.gov/citations/20210017594" target="_blank">NASA Technical Reports Server</a></li>
                   </ul>
             </div>
             <div class="image-container">
