--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Sticky Navigation Bar -->
 <nav class="nav">
     <div class="navbar-brand">
-      <a href="javascript:void(0);" onclick="openTab('landing', this);">JS DS Services LLC</a>
+      <a href="javascript:void(0);" onclick="openTab('landing', this);">JS DS Services</a>
     </div>
     <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
     <div class="nav-links">
@@ -337,7 +337,24 @@
             </div>
         </div>
 
-        
+        <div class="section-divider"></div>
+        <div class="benefit">
+            <div class="benefit-text-content">
+                <h2>How We Die</h2>
+                <p>An interactive data visualization exploring how causes of death in the United States change by age, sex, and time period (1999–2024).
+                  <br>The project uses CDC/NCHS NVSS mortality data (ICD-10 underlying cause of death) and CDC WONDER population estimates to show three complementary views: share of deaths, yearly deaths, and mortality rates.
+                  <br>The site includes two paired sections: broad cause patterns (stacked area charts) and a drill-down view that lets you explore detailed subcategories within each broad cause, with interactive filtering, tooltips, and zooming.
+                </p>
+                <br>
+                <ul>
+                    <li><a href="https://www.jsdatascience.com/how-we-die/" target="_blank">Project Page</a></li>
+                </ul>
+            </div>
+            <div class="image-container">
+                <img src="assets/how-we-die.gif" alt="How We Die Thumbnail" class="dataviz-solutions">
+            </div>
+        </div>
+
         <div class="section-divider"></div>
         <div class="benefit">
             <div class="benefit-text-content">
@@ -415,7 +432,7 @@
   </div>
 
   <footer>
-    <p>© 2024 by JS Data Science Services LLC</p>
+    <p>© 2024 by JS Data Science Services</p>
   </footer>
   
     <script>
